docs and chore changes

--- a/src/app/form-flow/form-flow-content.component.html
+++ b/src/app/form-flow/form-flow-content.component.html
@@ -7,7 +7,7 @@
     <mat-icon matTooltip="Add new control after selected" (click)="addNewCtl()">add</mat-icon>
     <mat-icon matTooltip="Remove selected control" (click)="removeSelectedCtl()">delete</mat-icon>
     }
-    <small>Editing form: {{config.formPath}}/{{formId}}.json</small>
+    <small>Editing form: {{config.apiFullFormPath}}/{{formId}}.json</small>
 
   </div>
 </mat-card-subtitle>
