--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -1,19 +1,14 @@
 @use "@angular/material" as mat;
 @use "@angular/material-experimental" as matx;
 
+// need this for typography
+$my-typography: mat.define-typography-config();
+@include mat.typography-hierarchy($my-typography);
 
-$light-theme: matx.define-theme(
-  (
-    color: (
-      theme-type: light,
-      primary: matx.$m3-azure-palette,
-      tertiary: matx.$m3-blue-palette
-    ),
-    density: (
-      scale: -1
-    )
-  )
-);
+$light-theme: matx.define-theme((color: (theme-type: light,
+        primary: matx.$m3-azure-palette,
+        tertiary: matx.$m3-blue-palette ),
+      density: (scale: -1)));
 
 @include mat.core();
 @include matx.color-variants-back-compat($light-theme);
@@ -21,7 +16,6 @@ $light-theme: matx.define-theme(
 :root {
   @include mat.all-component-themes($light-theme);
 }
-
 
 // $m3-red-palette
 // $m3-green-palette
