--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,23 +1,26 @@
-<div class="main-container">
-<!-- <div class="full-height"> -->
-    <mat-tab-group>
-        <mat-tab label="Form sample based on json definition">
-            <div class="tab-content">
-                <app-form-sample></app-form-sample>
-            </div>
+<mat-card>
 
-        </mat-tab>
-        <mat-tab label="Typography cheatsheet">
-            <div class="tab-content">
-                <app-typography></app-typography>
-            </div>
-        </mat-tab>
-        <mat-tab label="Buttons">
-            <div class="tab-content">
-                <app-buttons></app-buttons>
-            </div>
-        </mat-tab>
-    </mat-tab-group>
+    <div class="main-container">
+        <!-- <div class="full-height"> -->
+        <mat-tab-group>
+            <mat-tab label="Form sample based on json definition">
+                <div class="tab-content">
+                    <app-form-sample></app-form-sample>
+                </div>
+
+            </mat-tab>
+            <mat-tab label="Typography cheatsheet">
+                <div class="tab-content">
+                    <app-typography></app-typography>
+                </div>
+            </mat-tab>
+            <mat-tab label="Buttons">
+                <div class="tab-content">
+                    <app-buttons></app-buttons>
+                </div>
+            </mat-tab>
+        </mat-tab-group>
 
 
-</div>
+    </div>
+</mat-card>
