--- a/src/app/typography/typography.component.html
+++ b/src/app/typography/typography.component.html
@@ -1,6 +1,6 @@
 @for (item of list; track $index) {
 
-<div [ngClass]="item">{{item}}</div>
+<div [ngClass]="item" class="mat-text-color">{{item}}</div>
 
 }
 
