--- a/src/app/form-flow/form-flow-content.component.html
+++ b/src/app/form-flow/form-flow-content.component.html
@@ -132,7 +132,7 @@
           <input #slider matSliderThumb [formControlName]="ctl.name">
         </mat-slider>
       </div>
-      <div class="mat-h4">
+      <div class="mat-h4 mat-text-color">
         {{slider.value}}
       </div> 
     </div>
@@ -192,7 +192,7 @@
           <mat-icon>close</mat-icon>
         </button>
         }
-        <mat-icon>abc</mat-icon>
+        <mat-icon class="mat-text-color">abc</mat-icon>
 
       </div>
     </div>
@@ -222,7 +222,7 @@
       <!-- <button mat-icon-button matSuffix (click)="openApiList(trigger, ctl.name); $event.stopPropagation()">
         <mat-icon>arrow_drop_down</mat-icon>
       </button> -->
-      <mat-icon>abc</mat-icon>
+      <mat-icon class="mat-text-color">abc</mat-icon>
 
     </div>
     <mat-autocomplete #auto="matAutocomplete" (optionSelected)="chipSelected($event, ctl, chipInput);">
@@ -238,10 +238,10 @@
     }
 
     @if(ctl.hintStart){
-    <mat-hint>{{ctl.hintStart}}</mat-hint>
+    <mat-hint class="mat-text-color">{{ctl.hintStart}}</mat-hint>
     }
     @if(ctl.hintEnd){
-    <mat-hint align="end">{{ctl.hintEnd}}</mat-hint>
+    <mat-hint align="end" class="mat-text-color">{{ctl.hintEnd}}</mat-hint>
     }
 
     @if (formGroup.controls[ctl.name].hasError('required')) {
