--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -5,20 +5,28 @@
 $my-typography: mat.define-typography-config();
 @include mat.typography-hierarchy($my-typography);
 
-$light-theme: matx.define-theme((color: (theme-type: light,
-primary: matx.$m3-chartreuse-palette)));
-$dark-theme: matx.define-theme((color: (theme-type: dark,
-        primary: matx.$m3-chartreuse-palette)));
+$theme: matx.define-theme(
+  (
+    color: (
+      theme-type: dark,
+      primary: matx.$m3-azure-palette,
+      tertiary: matx.$m3-blue-palette
+    ),
+    density: (
+      scale: -1
+    )
+  )
+);
 
+@include mat.core();
+@include matx.color-variants-back-compat($theme);
 
-// $light-theme: matx.define-theme((color: (theme-type: dark,
-//         primary: matx.$m3-azure-palette,
-//         tertiary: matx.$m3-blue-palette ),
-//       density: (scale: -1)));
+:root {
+  @include mat.all-component-themes($theme);
+}
 
-html {
-  // Apply the base theme at the root, so it will be inherited by the whole app.
-  @include mat.all-component-themes($dark-theme);
+.mat-text-color {
+  color: var(--mat-app-text-color);
 }
 
 // $m3-red-palette
