--- a/src/app/theme.scss
+++ b/src/app/theme.scss
@@ -13,7 +13,7 @@ $theme: matx.define-theme(
       theme-type: $theme-type,
       primary: matx.$m3-cyan-palette,
       // secondary: matx.$m3-orange-palette,
-      tertiary: matx.$m3-magenta-palette
+      tertiary: matx.$m3-yellow-palette
     ),
     density: (
       scale: -1
