--- a/src/app/buttons/buttons.component.html
+++ b/src/app/buttons/buttons.component.html
@@ -2,6 +2,7 @@
     <span>title</span>
 </mat-toolbar>
 
+<mat-card-content>
 <section>
     <div class="example-label">Basic</div>
     <div class="example-button-row">
@@ -128,8 +129,4 @@
       </div>
     </div>
   </section>
-  
-  
-  <!-- Copyright 2024 Google LLC. All Rights Reserved.
-      Use of this source code is governed by an MIT-style license that
-      can be found in the LICENSE file at https://angular.io/license -->
+</mat-card-content>
