--- a/src/app/buttons/buttons.component.html
+++ b/src/app/buttons/buttons.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary" class="mat-elevation-z6">
-    <span>title</span>
+<mat-toolbar class="mat-primary-background mat-elevation-z6">
+  <span class="mat-primary-color">Buttons</span>
 </mat-toolbar>
 
 <mat-card-content>
