--- a/src/app/form-sample/form-sample.component.html
+++ b/src/app/form-sample/form-sample.component.html
@@ -1,5 +1,5 @@
-<mat-toolbar color="primary" class="mat-elevation-z6">
-  <span class="mat-mdc-card-title">Dynamic form example</span>
+<mat-toolbar class="mat-primary-background mat-elevation-z6">
+  <span class="mat-primary-color">Dynamic form example</span>
 </mat-toolbar>
 @if(formGroup){
 
