--- a/src/app/typography/typography.component.html
+++ b/src/app/typography/typography.component.html
@@ -1,3 +1,6 @@
+<mat-toolbar class="mat-primary-background mat-elevation-z6">
+    <span class="mat-primary-color">Typography</span>
+  </mat-toolbar>
 <mat-card>
     <mat-card-content>
         @for (item of list; track $index) {
