--- a/src/app/form-sample/form-sample.component.html
+++ b/src/app/form-sample/form-sample.component.html
@@ -29,7 +29,7 @@
   <div class="ff-row ff-space-around">
     <button mat-flat-button (click)="enable(true)">Enable</button>
     <button mat-raised-button (click)="enable(false)">Disable</button>
-    <button mat-raised-button (click)="loadData()">Load sample data</button>
+    <button mat-raised-button (click)="loadData()">Load sample api data</button>
     <button mat-raised-button (click)="clearData()">Clear data</button>
     <mat-slide-toggle [(ngModel)]="allowEditMode" [ngModelOptions]="{standalone: true}">Allow edit</mat-slide-toggle>
     <mat-slide-toggle [(ngModel)]="useOutline" [ngModelOptions]="{standalone: true}"
