--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,12 @@
     <div class="main-container">
         <!-- <div class="full-height"> -->
         <mat-tab-group>
+            <mat-tab label="Form sample items based on json definition">
+                <div class="tab-content">
+                    <app-form-sample-items></app-form-sample-items>
+                </div>
+
+            </mat-tab>
             <mat-tab label="Form sample based on json definition">
                 <div class="tab-content">
                     <app-form-sample></app-form-sample>
