--- a/src/app/form-sample-items/form-sample-items.component.css
+++ b/src/app/form-sample-items/form-sample-items.component.css
@@ -4,20 +4,38 @@
   width: 1600px;
 }
 
-.example-viewport {
+.virtual-viewport {
   height: 500px;
-  width: 800px;
+  /* width: 800px; */
   padding: 10px;
   background-color: white;
 }
 
-.example-item {
-  margin: 2px 10px;
-  height: 50px;
+.ff-item {
+  padding: 5px 10px;
   border-bottom: 1px lightgray solid;
-  /* background-color: gainsboro; */
+  align-items: center;
+  /* background-color: red; */
 }
 
 .item-selected {
-  background-color: gainsboro;
+  background-color: whitesmoke;
+}
+
+.item-gray {
+  color: lightgray;
+}
+
+.item-buttons {
+  flex: 0 0 50px;
+  /* Fixná šírka 50px */
+  padding: 0 10px;
+  /* Priestor okolo ikon */
+  align-items: center;
+  /* Zarovnajte ikony vertikálne na stred */
+}
+
+.item-content {
+  flex: 1;
+  /* Automaticky natiahne zvyšný priestor */
 }
